infrastructure/talos01/config/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "192.168.2.20"
spec:
  tls:
    - hosts:
        - minio-tf.bsdserver.nl
      secretName: minio-api-tls
  rules:
    - host: minio-tf.bsdserver.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "192.168.2.20"
spec:
  tls:
    - hosts:
        - minioadmin-tf.bsdserver.nl
      secretName: minio-console-tls
  rules:
    - host: minioadmin-tf.bsdserver.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
